cluster/dizambee/network-policy.yaml
# General network policies for the dizambee namespace
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: dizambee
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress-except-internal
  namespace: dizambee
spec:
  podSelector: 
    matchLabels:
      app: dizambee-api
  policyTypes:
    - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16

# Allowing frontend ingress traffic
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-frontend-ingress-traffic
#   namespace: dizambee
# spec:
#   podSelector: 
#     matchLabels:
#       app: dizambee-frontend
#   policyTypes:
#     - Ingress
#     - Egress
#   ingress:
#   - from:
#       - namespaceSelector: 
#           matchLabels:
#             kubernetes.io/metadata.name: nginx-ingress-external
#     ports:
#       - protocol: TCP
#         port: 3000
#   egress:
#   - to:
#     - namespaceSelector:
#         matchLabels:
#           kubernetes.io/metadata.name: nginx-ingress-external

# Allowing api to kube-dns traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-kube-dns
  namespace: dizambee
spec:
  podSelector:
    matchExpressions: 
      - key: app
        operator: In
        values:
          - dizambee-api
          - dizambee-frontend
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53


# Allowing api ingress traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-ingress-traffic
  namespace: dizambee
spec:
  podSelector: 
    matchLabels:
      app: dizambee-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
      - namespaceSelector: 
          matchLabels:
            kubernetes.io/metadata.name: nginx-ingress-external
    ports:
      - protocol: TCP
        port: 8080
  - from:
      - podSelector:
          matchLabels:
            app: dizambee-frontend
    ports:
      - protocol: TCP
        port: 8080
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx-ingress-external

# Allowing frontend to api traffic
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-frontend-to-api-port-8080
#   namespace: dizambee
# spec:
#   podSelector: 
#     matchLabels:
#       app: dizambee-frontend
#   policyTypes:
#     - Egress
#   egress:
#   - to:
#     - podSelector:
#         matchLabels:
#           app: dizambee-api
#     ports:
#       - protocol: TCP
#         port: 8080
